<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="sne.workorganizer.MainActivity">

    <item android:id="@+id/menu_calendar"
          android:title="@string/calendar"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_clients"
          android:title="@string/clients"
          app:showAsAction="never"/>

    <item android:id="@+id/menu_gallery_work"
          android:title="@string/menu_gallery_work"
          app:showAsAction="never"/>

    <item android:id="@+id/menu_gallery_design"
          android:title="@string/menu_gallery_design"
          app:showAsAction="never"/>

<!--
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
-->

    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          app:showAsAction="never"/>

</menu>
