<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="sne.workorganizer.CreateClientActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_name"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/client_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_phone"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/client_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_social"
                android:inputType="textUri"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/client_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_email"
                android:inputType="text|textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>