<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/work_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"/>

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/work_time"
            android:timePickerMode="spinner"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <AutoCompleteTextView
                    android:hint="@string/client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/select_client"
                    android:layout_weight="1"
                    android:inputType="textImeMultiLine|textNoSuggestions"
                    android:imeOptions="actionDone"
                    android:imeActionLabel="@string/ok"
                    />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_person_add_black_24dp"
                android:id="@+id/btn_new_client"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:id="@+id/work_title"
                android:inputType="textImeMultiLine|text|textNoSuggestions"
                android:imeOptions="actionDone"
                android:imeActionLabel="@string/ok"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/work_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/price"
                android:imeOptions="actionDone"
                android:imeActionLabel="@string/ok"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/select_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/work_design"
                android:layout_weight="100"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_gravity="center_vertical"
                android:paddingStart="1dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_local_florist_black_24dp"
                android:id="@+id/btn_select_design"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:onClick="onSelectDesign"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
